adde seconde box moving around

--- a/Art/rezak/boxmove.html
+++ b/Art/rezak/boxmove.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <p><b>Note:</b> This example does not work in Internet Explorer 9 and earlier versions.</p>
+<p><b>Note:</b> This example does not work in Internet Explorer 9 and earlier versions.</p>
 
 <div>
     <p>I'm moving guys</p>
